--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,25 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
+  bottom_sheet: ^4.0.4
+  cached_network_image: ^3.3.1
+  ffmpeg_kit_flutter: ^6.0.3
+  firebase_storage: ^12.1.0
+  flutter_riverpod: ^2.5.1
+  font_awesome_flutter: ^10.7.0
+  fraction: ^5.0.2
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  path: ^1.9.0
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  timeago: ^3.6.1
+  uuid: ^4.4.0
+  video_editor: ^3.0.0
+  video_player: ^2.9.1
+  flutter_staggered_grid_view: ^0.7.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +68,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  auto_route_generator: ^7.3.1
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
